NlogN  快排，堆排，归并排序 http://www.lintcode.com/en/problem/sort-integers-ii/

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>zju</groupId>
     <artifactId>lint</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
